<resources>
    <string name="app_name">K-cup</string>
    <string name="normal_game">Le K-Cup</string>
    <string name="normal_game_info">Un mode pour s\'ambiancer !</string>
    <string name="after_game">L\'after K-Cup</string>
    <string name="after_game_info">Le mieux après le boulot !</string>
    <string name="king_game">Le King K-Cup</string>
    <string name="king_game_info">Un verre au centre et let\'s go !</string>
    <string name="berserk_game">Le berserk</string>
    <string name="berserk_game_info">Le mode pour les vrais alcoolos !</string>
    <string name="new_game_now">Le K-Cup !</string>
    <string name="add_player">Un buveur de plus ?</string>
    <string name="new_game">Nouvelle partie</string>
    <string name="fast_game">Partie rapide</string>
    <string name="continue_game">On termine ce que l\'on a commencé ?</string>
    <string name="new_game_easy">Je bois un peu</string>
    <string name="new_game_normal">Je sais boire !</string>
    <string name="new_game_hard">L\'alcool ? C\'est de l\'eau!</string>
    <string name="enter_name">Qui seront mes compagnons de boissons ?</string>
    <string name="player_nb">Joueur</string>
    <string name="player">Joueur %s</string>
    <string name="choose_game_mode_title">Mes compagnons sont plutôt du genre :</string>
    <string name="choose_game_mode_king_title">J\'aime l\'alcool :</string>
    <string name="new_game_king_easy">Un peu</string>
    <string name="new_game_king_normal">Beaucoup</string>
    <string name="new_game_king_hard">Passionnément</string>
    <string name="new_game_king_really_hard">A la folie !</string>
    <string name="with_king_rule">K-Cup sera-til de la partie ?</string>
    <string name="long_game">L\'alcool ne vous fait pas peur ? </string>
    <string name="lets_go">On veut boire !</string>
    <string name="mode_easy">Il ne faut pas trop boire !</string>
    <string name="mode_normal">Buveur du soir bonsoir !</string>
    <string name="mode_hard">L\'alcool ? C\'est de l\'eau !</string>
    <string name="mode_berserk">Préparez-vous\npour le\nBerserk !</string>
    <string name="mode_berserk_2">Chaque choix aura des conséquences !</string>
    <string name="no_need_player_title">OYÉ OYÉ !</string>
    <string name="challenge_title">DUEL !</string>
    <string name="choice_title">LA DEVINETTE !</string>
    <string name="kcup_game_title">LE K-CUP !</string>
    <string name="new_rule_title">NOUVELLE RÈGLE !</string>
    <string name="new_rule_next_title">FIN DE LA RÈGLE !</string>
    <string name="end">Que d\'aventures !</string>
    <string name="end_game">Revenez à vos moutons !</string>
    <string name="option_end_game">Et pourquoi pas...</string>
    <string name="send_mail">Envoie de mail</string>
    <string name="error_send_mail">Envoie de mail impossible !</string>
    <string name="error_open_facebook">Ouverture de Facebook impossible !</string>
    <string name="adress_mail">kcup-drink-game@hotmail.com</string>
    <string name="subject_mail">Grand K-cup - J\'ai des idées à te dire :</string>
    <string name="dialog_option_title">Une envie ?</string>
    <string name="dialog_option_facebook">Un like sur Facebook ?</string>
    <string name="dialog_option_appli">Une note pour K-Cup ?</string>
    <string name="dialog_option_mail">Une idée à partager ?</string>
    <string name="dialog_warning_title_begin">Salutations !</string>
    <string name="dialog_warning_title">L\'abus d\'alcool est dangereux pour la santé. En jouant avec k-cup vous confirmez que vous êtes responsable des éventuelles conséquences.</string>
    <string name="dialog_warning_no">Annuler</string>
    <string name="dialog_warning_no_no">Laisse tomber</string>
    <string name="dialog_warning_yes">Je joue !</string>
    <string name="dialog_game_title">Alors ?\n\nOn ne veut plus boire ?</string>
    <string name="dialog_game_no">Jamais !</string>
    <string name="dialog_game_yes">Oui j\'ai trop bu.</string>
    <string name="drink">gorgée</string>
    <string name="drinks">gorgées</string>
    <string name="all">son verre</string>
    <string name="card_1">%s, tu choisis une personne qui doit boire la moitié de son verre</string>
    <string name="card_2" formatted="false">%s, tu bois %b</string>
    <string name="card_3" formatted="false">%s, tu donnes %b</string>
    <string name="card_4">Tous les joueurs touchent le sol. Le dernier boit %b</string>
    <string name="card_5">Tous les hommes boivent %b</string>
    <string name="card_6">Toutes les femmes boivent %b</string>
    <string name="card_7">Tous les joueurs lève une main. Le dernier boit %b</string>
    <string name="card_8">%s, tu choisis un joueur. Si un des deux joueurs boit, l\'autre boit à chaque fois !</string>
    <string name="card_9" formatted="false">%s, tu choisis un mot et un sens. Chaque joueur doit trouver une rime à tour de rôle. Le premier qui se trompe boit %b</string>
    <string name="card_10" formatted="false">%s, tu dois dire une action que tu n\'as jamais faite. Les joueurs qui l\'ont fait boivent %b</string>
    <string name="card_knight">%s, tu inventes une règle</string>
    <string name="card_queen" formatted="false">%s, tu choisis un joueur.\nIl doit tout le temps te vouvoyer et te complimenter. A chaque oublie c\'est %b !</string>
    <string name="card_king">%s, tu mets une partie de ton verre dans celui au centre</string>
    <string name="you_are_the_king">Oyé Oyé !\n\n%s est le nouveau Roi ! \n\nTu peux boire le verre au centre !</string>
    <string-array name="kcup_array" formatted="false">
        <item>%s et %a jouent à pierre papier ciseau.\n\nLe perdant c\'est %b !</item>
        <item>%s et %a jouent à la bataille de regard.\n\nLe perdant c\'est %b !</item>
        <item>%s et %a jouent au combat de pouces.\n\nLe perdant c\'est %b !</item>
        <item>%s et %a jouent à pile ou face.\n\nLe perdant c\'est %b !</item>
    </string-array>
    <string name="kcup_content" formatted="false">%s et %a jouent à pierre papier ciseau.\n\nLe perdant c\'est %b !</string>
</resources>