<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/enter_name"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/add_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bouton_type"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/add_player"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginTop="12dp"
            android:background="@android:color/black" />

        <CheckBox
            android:id="@+id/with_king_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:background="?attr/selectableItemBackground"
            android:checked="true"
            android:text="@string/with_king_rule"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/with_long_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="?attr/selectableItemBackground"
            android:checked="false"
            android:text="@string/long_game"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginBottom="12dp"
            android:background="@android:color/black" />

        <Button
            android:id="@+id/new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bouton_type"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/new_game_now"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>