<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        android:orientation="vertical"
        android:weightSum="100">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:src="@drawable/ic_kcup_chevalier" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/choose_game_mode_king_title"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="55"
            android:gravity="top"
            android:orientation="vertical">

            <Button
                android:id="@+id/easy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/bouton_type"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/new_game_king_easy"
                android:textAllCaps="false"
                android:textSize="24sp" />

            <Button
                android:id="@+id/normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/bouton_type"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/new_game_king_normal"
                android:textAllCaps="false"
                android:textSize="24sp" />

            <Button
                android:id="@+id/hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/bouton_type"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/new_game_king_hard"
                android:textAllCaps="false"
                android:textSize="24sp" />

            <Button
                android:id="@+id/really_hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/bouton_type"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/new_game_king_really_hard"
                android:textAllCaps="false"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="18dp"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:tint="@color/black_selected_white" />

</FrameLayout>