<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_puk_face_blanc_full" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/dialog_warning_title"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/not_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bouton_type"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/dialog_warning_no"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bouton_type"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/dialog_warning_yes"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>