<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="18dp"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:tint="@color/black_selected_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="32dp"
            android:layout_weight="40"
            android:src="@drawable/ic_kcup_face" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/dialog_option_title"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="55"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bouton_type"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="10dp"
                    android:text="@string/dialog_option_facebook"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/appli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bouton_type"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="10dp"
                    android:text="@string/dialog_option_appli"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bouton_type"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="10dp"
                    android:text="@string/dialog_option_mail"
                    android:textAllCaps="false"
                    android:textSize="18sp" />


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>